wither_derive/tests/fail/model-enum.rs
use serde::{Serialize, Deserialize};
use wither::Model;

#[derive(Serialize, Deserialize, Model)]
enum BadModel {}

fn main() {}
