wither_derive/tests/fail/model-enum.stderr
error: only structs can be used as wither models
 --> $DIR/model-enum.rs:5:1
  |
5 | enum BadModel {}
  | ^^^^^^^^^^^^^^^^
